--- a/hiking_club_frontend/package.json
+++ b/hiking_club_frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "aos": "^2.3.4",
     "cra-template": "1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
