--- a/hiking_club_frontend/package.json
+++ b/hiking_club_frontend/package.json
@@ -7,13 +7,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-
-    "axios": "^1.8.2",
-
     "aos": "^2.3.4",
-
+    "axios": "^1.8.2",
     "cra-template": "1.3.0",
     "react": "^19.0.0",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
